y.output
Terminaux inutilisés dans la grammaire

    tERR
    tPRINTF


Grammaire

    0 $accept: Programme $end

    1 Programme: Funs

    2 Funs: Fun
    3     | Fun Funs

    4 Fun: FunType FunName tPO DeclArgs tPF tAO Body tAF

    5 FunCall: FunName tPO CallArgs tPF

    6 DeclArgs: VarType tID DeclArgNext
    7         | %empty

    8 DeclArgNext: tVIRG DeclArgs
    9            | %empty

   10 CallArgs: RightOperand CallArgNext
   11         | %empty

   12 CallArgNext: tVIRG CallArgs
   13            | %empty

   14 PreType: tCONST
   15        | %empty

   16 Type: tINT
   17     | tSTR

   18 FunType: Type

   19 VarType: PreType Type

   20 FunName: tMAIN
   21        | tID

   22 Body: Lignes

   23 Lignes: Ligne Lignes
   24       | %empty

   25 Ligne: FunCall tPVIRG
   26      | Declaration tPVIRG
   27      | Affectation tPVIRG

   28 $@1: %empty

   29 Ligne: Condition tAO $@1 Body tAF

   30 Declaration: VarType tID

   31 RightOperand: FunCall
   32             | Operations
   33             | tNB
   34             | tID

   35 Operations: RightOperand tSOUS RightOperand
   36           | RightOperand tADD RightOperand
   37           | RightOperand tDIV RightOperand
   38           | RightOperand tMUL RightOperand

   39 Affectation: tID tEGAL RightOperand

   40 Condition: tIF ArgCondition
   41          | tWHILE ArgCondition
   42          | tFOR ForCondition

   43 ArgCondition: tPO Bool tPF

   44 ForCondition: tPO DeclarationIndice tPVIRG Bool tPVIRG Affectation tPF

   45 DeclarationIndice: Affectation
   46                  | tID

   47 Bool: Comparaison
   48     | tID

   49 Comparateur: tINF
   50            | tSUP
   51            | tINFEG
   52            | tSUPEG

   53 Comparaison: RightOperand Comparateur RightOperand


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tEGAL (258) 39
    tPO (259) 4 5 43 44
    tPF (260) 4 5 43 44
    tAO (261) 4 29
    tAF (262) 4 29
    tSOUS (263) 35
    tADD (264) 36
    tDIV (265) 37
    tMUL (266) 38
    tERR (267)
    tPRINTF (268)
    tMAIN (269) 20
    tINT (270) 16
    tSTR (271) 17
    tCONST (272) 14
    tVIRG (273) 8 12
    tPVIRG (274) 25 26 27 44
    tIF (275) 40
    tWHILE (276) 41
    tFOR (277) 42
    tINF (278) 49
    tSUP (279) 50
    tINFEG (280) 51
    tSUPEG (281) 52
    tNB <nb> (282) 33
    tID <varchar> (283) 6 21 30 34 39 46 48


Non-terminaux, suivis des règles où ils apparaissent

    $accept (29)
        à gauche: 0
    Programme (30)
        à gauche: 1
        à droite: 0
    Funs (31)
        à gauche: 2 3
        à droite: 1 3
    Fun (32)
        à gauche: 4
        à droite: 2 3
    FunCall (33)
        à gauche: 5
        à droite: 25 31
    DeclArgs (34)
        à gauche: 6 7
        à droite: 4 8
    DeclArgNext (35)
        à gauche: 8 9
        à droite: 6
    CallArgs (36)
        à gauche: 10 11
        à droite: 5 12
    CallArgNext (37)
        à gauche: 12 13
        à droite: 10
    PreType <nb> (38)
        à gauche: 14 15
        à droite: 19
    Type <nb> (39)
        à gauche: 16 17
        à droite: 18 19
    FunType (40)
        à gauche: 18
        à droite: 4
    VarType <nb> (41)
        à gauche: 19
        à droite: 6 30
    FunName (42)
        à gauche: 20 21
        à droite: 4 5
    Body (43)
        à gauche: 22
        à droite: 4 29
    Lignes (44)
        à gauche: 23 24
        à droite: 22 23
    Ligne (45)
        à gauche: 25 26 27 29
        à droite: 23
    $@1 (46)
        à gauche: 28
        à droite: 29
    Declaration (47)
        à gauche: 30
        à droite: 26
    RightOperand (48)
        à gauche: 31 32 33 34
        à droite: 10 35 36 37 38 39 53
    Operations (49)
        à gauche: 35 36 37 38
        à droite: 32
    Affectation (50)
        à gauche: 39
        à droite: 27 44 45
    Condition (51)
        à gauche: 40 41 42
        à droite: 29
    ArgCondition (52)
        à gauche: 43
        à droite: 40 41
    ForCondition (53)
        à gauche: 44
        à droite: 42
    DeclarationIndice (54)
        à gauche: 45 46
        à droite: 44
    Bool (55)
        à gauche: 47 48
        à droite: 43 44
    Comparateur (56)
        à gauche: 49 50 51 52
        à droite: 53
    Comparaison (57)
        à gauche: 53
        à droite: 47


État 0

    0 $accept: . Programme $end

    tINT  décalage et aller à l'état 1
    tSTR  décalage et aller à l'état 2

    Programme  aller à l'état 3
    Funs       aller à l'état 4
    Fun        aller à l'état 5
    Type       aller à l'état 6
    FunType    aller à l'état 7


État 1

   16 Type: tINT .

    $défaut  réduction par utilisation de la règle 16 (Type)


État 2

   17 Type: tSTR .

    $défaut  réduction par utilisation de la règle 17 (Type)


État 3

    0 $accept: Programme . $end

    $end  décalage et aller à l'état 8


État 4

    1 Programme: Funs .

    $défaut  réduction par utilisation de la règle 1 (Programme)


État 5

    2 Funs: Fun .
    3     | Fun . Funs

    tINT  décalage et aller à l'état 1
    tSTR  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 2 (Funs)

    Funs     aller à l'état 9
    Fun      aller à l'état 5
    Type     aller à l'état 6
    FunType  aller à l'état 7


État 6

   18 FunType: Type .

    $défaut  réduction par utilisation de la règle 18 (FunType)


État 7

    4 Fun: FunType . FunName tPO DeclArgs tPF tAO Body tAF

    tMAIN  décalage et aller à l'état 10
    tID    décalage et aller à l'état 11

    FunName  aller à l'état 12


État 8

    0 $accept: Programme $end .

    $défaut  accepter


État 9

    3 Funs: Fun Funs .

    $défaut  réduction par utilisation de la règle 3 (Funs)


État 10

   20 FunName: tMAIN .

    $défaut  réduction par utilisation de la règle 20 (FunName)


État 11

   21 FunName: tID .

    $défaut  réduction par utilisation de la règle 21 (FunName)


État 12

    4 Fun: FunType FunName . tPO DeclArgs tPF tAO Body tAF

    tPO  décalage et aller à l'état 13


État 13

    4 Fun: FunType FunName tPO . DeclArgs tPF tAO Body tAF

    tCONST  décalage et aller à l'état 14

    tPF       réduction par utilisation de la règle 7 (DeclArgs)
    $défaut  réduction par utilisation de la règle 15 (PreType)

    DeclArgs  aller à l'état 15
    PreType   aller à l'état 16
    VarType   aller à l'état 17


État 14

   14 PreType: tCONST .

    $défaut  réduction par utilisation de la règle 14 (PreType)


État 15

    4 Fun: FunType FunName tPO DeclArgs . tPF tAO Body tAF

    tPF  décalage et aller à l'état 18


État 16

   19 VarType: PreType . Type

    tINT  décalage et aller à l'état 1
    tSTR  décalage et aller à l'état 2

    Type  aller à l'état 19


État 17

    6 DeclArgs: VarType . tID DeclArgNext

    tID  décalage et aller à l'état 20


État 18

    4 Fun: FunType FunName tPO DeclArgs tPF . tAO Body tAF

    tAO  décalage et aller à l'état 21


État 19

   19 VarType: PreType Type .

    $défaut  réduction par utilisation de la règle 19 (VarType)


État 20

    6 DeclArgs: VarType tID . DeclArgNext

    tVIRG  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 9 (DeclArgNext)

    DeclArgNext  aller à l'état 23


État 21

    4 Fun: FunType FunName tPO DeclArgs tPF tAO . Body tAF

    tMAIN   décalage et aller à l'état 10
    tCONST  décalage et aller à l'état 14
    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tFOR    décalage et aller à l'état 26
    tID     décalage et aller à l'état 27

    tAF       réduction par utilisation de la règle 24 (Lignes)
    $défaut  réduction par utilisation de la règle 15 (PreType)

    FunCall      aller à l'état 28
    PreType      aller à l'état 16
    VarType      aller à l'état 29
    FunName      aller à l'état 30
    Body         aller à l'état 31
    Lignes       aller à l'état 32
    Ligne        aller à l'état 33
    Declaration  aller à l'état 34
    Affectation  aller à l'état 35
    Condition    aller à l'état 36


État 22

    8 DeclArgNext: tVIRG . DeclArgs

    tCONST  décalage et aller à l'état 14

    tPF       réduction par utilisation de la règle 7 (DeclArgs)
    $défaut  réduction par utilisation de la règle 15 (PreType)

    DeclArgs  aller à l'état 37
    PreType   aller à l'état 16
    VarType   aller à l'état 17


État 23

    6 DeclArgs: VarType tID DeclArgNext .

    $défaut  réduction par utilisation de la règle 6 (DeclArgs)


État 24

   40 Condition: tIF . ArgCondition

    tPO  décalage et aller à l'état 38

    ArgCondition  aller à l'état 39


État 25

   41 Condition: tWHILE . ArgCondition

    tPO  décalage et aller à l'état 38

    ArgCondition  aller à l'état 40


État 26

   42 Condition: tFOR . ForCondition

    tPO  décalage et aller à l'état 41

    ForCondition  aller à l'état 42


État 27

   21 FunName: tID .
   39 Affectation: tID . tEGAL RightOperand

    tEGAL  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 21 (FunName)


État 28

   25 Ligne: FunCall . tPVIRG

    tPVIRG  décalage et aller à l'état 44


État 29

   30 Declaration: VarType . tID

    tID  décalage et aller à l'état 45


État 30

    5 FunCall: FunName . tPO CallArgs tPF

    tPO  décalage et aller à l'état 46


État 31

    4 Fun: FunType FunName tPO DeclArgs tPF tAO Body . tAF

    tAF  décalage et aller à l'état 47


État 32

   22 Body: Lignes .

    $défaut  réduction par utilisation de la règle 22 (Body)


État 33

   23 Lignes: Ligne . Lignes

    tMAIN   décalage et aller à l'état 10
    tCONST  décalage et aller à l'état 14
    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tFOR    décalage et aller à l'état 26
    tID     décalage et aller à l'état 27

    tAF       réduction par utilisation de la règle 24 (Lignes)
    $défaut  réduction par utilisation de la règle 15 (PreType)

    FunCall      aller à l'état 28
    PreType      aller à l'état 16
    VarType      aller à l'état 29
    FunName      aller à l'état 30
    Lignes       aller à l'état 48
    Ligne        aller à l'état 33
    Declaration  aller à l'état 34
    Affectation  aller à l'état 35
    Condition    aller à l'état 36


État 34

   26 Ligne: Declaration . tPVIRG

    tPVIRG  décalage et aller à l'état 49


État 35

   27 Ligne: Affectation . tPVIRG

    tPVIRG  décalage et aller à l'état 50


État 36

   29 Ligne: Condition . tAO $@1 Body tAF

    tAO  décalage et aller à l'état 51


État 37

    8 DeclArgNext: tVIRG DeclArgs .

    $défaut  réduction par utilisation de la règle 8 (DeclArgNext)


État 38

   43 ArgCondition: tPO . Bool tPF

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 53

    FunCall       aller à l'état 54
    FunName       aller à l'état 30
    RightOperand  aller à l'état 55
    Operations    aller à l'état 56
    Bool          aller à l'état 57
    Comparaison   aller à l'état 58


État 39

   40 Condition: tIF ArgCondition .

    $défaut  réduction par utilisation de la règle 40 (Condition)


État 40

   41 Condition: tWHILE ArgCondition .

    $défaut  réduction par utilisation de la règle 41 (Condition)


État 41

   44 ForCondition: tPO . DeclarationIndice tPVIRG Bool tPVIRG Affectation tPF

    tID  décalage et aller à l'état 59

    Affectation        aller à l'état 60
    DeclarationIndice  aller à l'état 61


État 42

   42 Condition: tFOR ForCondition .

    $défaut  réduction par utilisation de la règle 42 (Condition)


État 43

   39 Affectation: tID tEGAL . RightOperand

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 62

    FunCall       aller à l'état 54
    FunName       aller à l'état 30
    RightOperand  aller à l'état 63
    Operations    aller à l'état 56


État 44

   25 Ligne: FunCall tPVIRG .

    $défaut  réduction par utilisation de la règle 25 (Ligne)


État 45

   30 Declaration: VarType tID .

    $défaut  réduction par utilisation de la règle 30 (Declaration)


État 46

    5 FunCall: FunName tPO . CallArgs tPF

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 11 (CallArgs)

    FunCall       aller à l'état 54
    CallArgs      aller à l'état 64
    FunName       aller à l'état 30
    RightOperand  aller à l'état 65
    Operations    aller à l'état 56


État 47

    4 Fun: FunType FunName tPO DeclArgs tPF tAO Body tAF .

    $défaut  réduction par utilisation de la règle 4 (Fun)


État 48

   23 Lignes: Ligne Lignes .

    $défaut  réduction par utilisation de la règle 23 (Lignes)


État 49

   26 Ligne: Declaration tPVIRG .

    $défaut  réduction par utilisation de la règle 26 (Ligne)


État 50

   27 Ligne: Affectation tPVIRG .

    $défaut  réduction par utilisation de la règle 27 (Ligne)


État 51

   29 Ligne: Condition tAO . $@1 Body tAF

    $défaut  réduction par utilisation de la règle 28 ($@1)

    $@1  aller à l'état 66


État 52

   33 RightOperand: tNB .

    $défaut  réduction par utilisation de la règle 33 (RightOperand)


État 53

   21 FunName: tID .
   34 RightOperand: tID .
   48 Bool: tID .

    tPO       réduction par utilisation de la règle 21 (FunName)
    tPF       réduction par utilisation de la règle 48 (Bool)
    tPVIRG    réduction par utilisation de la règle 48 (Bool)
    $défaut  réduction par utilisation de la règle 34 (RightOperand)


État 54

   31 RightOperand: FunCall .

    $défaut  réduction par utilisation de la règle 31 (RightOperand)


État 55

   35 Operations: RightOperand . tSOUS RightOperand
   36           | RightOperand . tADD RightOperand
   37           | RightOperand . tDIV RightOperand
   38           | RightOperand . tMUL RightOperand
   53 Comparaison: RightOperand . Comparateur RightOperand

    tSOUS   décalage et aller à l'état 67
    tADD    décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69
    tMUL    décalage et aller à l'état 70
    tINF    décalage et aller à l'état 71
    tSUP    décalage et aller à l'état 72
    tINFEG  décalage et aller à l'état 73
    tSUPEG  décalage et aller à l'état 74

    Comparateur  aller à l'état 75


État 56

   32 RightOperand: Operations .

    $défaut  réduction par utilisation de la règle 32 (RightOperand)


État 57

   43 ArgCondition: tPO Bool . tPF

    tPF  décalage et aller à l'état 76


État 58

   47 Bool: Comparaison .

    $défaut  réduction par utilisation de la règle 47 (Bool)


État 59

   39 Affectation: tID . tEGAL RightOperand
   46 DeclarationIndice: tID .

    tEGAL  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 46 (DeclarationIndice)


État 60

   45 DeclarationIndice: Affectation .

    $défaut  réduction par utilisation de la règle 45 (DeclarationIndice)


État 61

   44 ForCondition: tPO DeclarationIndice . tPVIRG Bool tPVIRG Affectation tPF

    tPVIRG  décalage et aller à l'état 77


État 62

   21 FunName: tID .
   34 RightOperand: tID .

    tPO       réduction par utilisation de la règle 21 (FunName)
    $défaut  réduction par utilisation de la règle 34 (RightOperand)


État 63

   35 Operations: RightOperand . tSOUS RightOperand
   36           | RightOperand . tADD RightOperand
   37           | RightOperand . tDIV RightOperand
   38           | RightOperand . tMUL RightOperand
   39 Affectation: tID tEGAL RightOperand .

    tSOUS  décalage et aller à l'état 67
    tADD   décalage et aller à l'état 68
    tDIV   décalage et aller à l'état 69
    tMUL   décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 39 (Affectation)


État 64

    5 FunCall: FunName tPO CallArgs . tPF

    tPF  décalage et aller à l'état 78


État 65

   10 CallArgs: RightOperand . CallArgNext
   35 Operations: RightOperand . tSOUS RightOperand
   36           | RightOperand . tADD RightOperand
   37           | RightOperand . tDIV RightOperand
   38           | RightOperand . tMUL RightOperand

    tSOUS  décalage et aller à l'état 67
    tADD   décalage et aller à l'état 68
    tDIV   décalage et aller à l'état 69
    tMUL   décalage et aller à l'état 70
    tVIRG  décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 13 (CallArgNext)

    CallArgNext  aller à l'état 80


État 66

   29 Ligne: Condition tAO $@1 . Body tAF

    tMAIN   décalage et aller à l'état 10
    tCONST  décalage et aller à l'état 14
    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tFOR    décalage et aller à l'état 26
    tID     décalage et aller à l'état 27

    tAF       réduction par utilisation de la règle 24 (Lignes)
    $défaut  réduction par utilisation de la règle 15 (PreType)

    FunCall      aller à l'état 28
    PreType      aller à l'état 16
    VarType      aller à l'état 29
    FunName      aller à l'état 30
    Body         aller à l'état 81
    Lignes       aller à l'état 32
    Ligne        aller à l'état 33
    Declaration  aller à l'état 34
    Affectation  aller à l'état 35
    Condition    aller à l'état 36


État 67

   35 Operations: RightOperand tSOUS . RightOperand

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 62

    FunCall       aller à l'état 54
    FunName       aller à l'état 30
    RightOperand  aller à l'état 82
    Operations    aller à l'état 56


État 68

   36 Operations: RightOperand tADD . RightOperand

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 62

    FunCall       aller à l'état 54
    FunName       aller à l'état 30
    RightOperand  aller à l'état 83
    Operations    aller à l'état 56


État 69

   37 Operations: RightOperand tDIV . RightOperand

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 62

    FunCall       aller à l'état 54
    FunName       aller à l'état 30
    RightOperand  aller à l'état 84
    Operations    aller à l'état 56


État 70

   38 Operations: RightOperand tMUL . RightOperand

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 62

    FunCall       aller à l'état 54
    FunName       aller à l'état 30
    RightOperand  aller à l'état 85
    Operations    aller à l'état 56


État 71

   49 Comparateur: tINF .

    $défaut  réduction par utilisation de la règle 49 (Comparateur)


État 72

   50 Comparateur: tSUP .

    $défaut  réduction par utilisation de la règle 50 (Comparateur)


État 73

   51 Comparateur: tINFEG .

    $défaut  réduction par utilisation de la règle 51 (Comparateur)


État 74

   52 Comparateur: tSUPEG .

    $défaut  réduction par utilisation de la règle 52 (Comparateur)


État 75

   53 Comparaison: RightOperand Comparateur . RightOperand

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 62

    FunCall       aller à l'état 54
    FunName       aller à l'état 30
    RightOperand  aller à l'état 86
    Operations    aller à l'état 56


État 76

   43 ArgCondition: tPO Bool tPF .

    $défaut  réduction par utilisation de la règle 43 (ArgCondition)


État 77

   44 ForCondition: tPO DeclarationIndice tPVIRG . Bool tPVIRG Affectation tPF

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 53

    FunCall       aller à l'état 54
    FunName       aller à l'état 30
    RightOperand  aller à l'état 55
    Operations    aller à l'état 56
    Bool          aller à l'état 87
    Comparaison   aller à l'état 58


État 78

    5 FunCall: FunName tPO CallArgs tPF .

    $défaut  réduction par utilisation de la règle 5 (FunCall)


État 79

   12 CallArgNext: tVIRG . CallArgs

    tMAIN  décalage et aller à l'état 10
    tNB    décalage et aller à l'état 52
    tID    décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 11 (CallArgs)

    FunCall       aller à l'état 54
    CallArgs      aller à l'état 88
    FunName       aller à l'état 30
    RightOperand  aller à l'état 65
    Operations    aller à l'état 56


État 80

   10 CallArgs: RightOperand CallArgNext .

    $défaut  réduction par utilisation de la règle 10 (CallArgs)


État 81

   29 Ligne: Condition tAO $@1 Body . tAF

    tAF  décalage et aller à l'état 89


État 82

   35 Operations: RightOperand . tSOUS RightOperand
   35           | RightOperand tSOUS RightOperand .
   36           | RightOperand . tADD RightOperand
   37           | RightOperand . tDIV RightOperand
   38           | RightOperand . tMUL RightOperand

    tDIV  décalage et aller à l'état 69
    tMUL  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 35 (Operations)


État 83

   35 Operations: RightOperand . tSOUS RightOperand
   36           | RightOperand . tADD RightOperand
   36           | RightOperand tADD RightOperand .
   37           | RightOperand . tDIV RightOperand
   38           | RightOperand . tMUL RightOperand

    tDIV  décalage et aller à l'état 69
    tMUL  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 36 (Operations)


État 84

   35 Operations: RightOperand . tSOUS RightOperand
   36           | RightOperand . tADD RightOperand
   37           | RightOperand . tDIV RightOperand
   37           | RightOperand tDIV RightOperand .
   38           | RightOperand . tMUL RightOperand

    $défaut  réduction par utilisation de la règle 37 (Operations)


État 85

   35 Operations: RightOperand . tSOUS RightOperand
   36           | RightOperand . tADD RightOperand
   37           | RightOperand . tDIV RightOperand
   38           | RightOperand . tMUL RightOperand
   38           | RightOperand tMUL RightOperand .

    $défaut  réduction par utilisation de la règle 38 (Operations)


État 86

   35 Operations: RightOperand . tSOUS RightOperand
   36           | RightOperand . tADD RightOperand
   37           | RightOperand . tDIV RightOperand
   38           | RightOperand . tMUL RightOperand
   53 Comparaison: RightOperand Comparateur RightOperand .

    tSOUS  décalage et aller à l'état 67
    tADD   décalage et aller à l'état 68
    tDIV   décalage et aller à l'état 69
    tMUL   décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 53 (Comparaison)


État 87

   44 ForCondition: tPO DeclarationIndice tPVIRG Bool . tPVIRG Affectation tPF

    tPVIRG  décalage et aller à l'état 90


État 88

   12 CallArgNext: tVIRG CallArgs .

    $défaut  réduction par utilisation de la règle 12 (CallArgNext)


État 89

   29 Ligne: Condition tAO $@1 Body tAF .

    $défaut  réduction par utilisation de la règle 29 (Ligne)


État 90

   44 ForCondition: tPO DeclarationIndice tPVIRG Bool tPVIRG . Affectation tPF

    tID  décalage et aller à l'état 91

    Affectation  aller à l'état 92


État 91

   39 Affectation: tID . tEGAL RightOperand

    tEGAL  décalage et aller à l'état 43


État 92

   44 ForCondition: tPO DeclarationIndice tPVIRG Bool tPVIRG Affectation . tPF

    tPF  décalage et aller à l'état 93


État 93

   44 ForCondition: tPO DeclarationIndice tPVIRG Bool tPVIRG Affectation tPF .

    $défaut  réduction par utilisation de la règle 44 (ForCondition)
